# algorithms

./: .gitignore  pyproject.toml
algorithms/: bucket.py
algorithms/ciphers/: anagrams.py  palindromes.py
algorithms/custom_collections/: queues.py  stacks.py
algorithms/searching/: binary_search.py  bucket.py
algorithms/sorting/: bucket.py  insertion_sort.py
tests/: test_algorithms.py
